syntax = "proto3";

option go_package=".;serivice";

service SayHello {
    rpc SayHello (HelloRequest) returns (HelloResponse){}
}

message HelloRequest {
 string requestName = 1;
 int64 age = 2;
 repeated string name =3;
}

message HelloResponse {
    string responeMsg =1;
}